[gd_scene load_steps=4 format=2]

[ext_resource path="res://client/player/Player.gd" type="Script" id=1]
[ext_resource path="res://shared/frontend/assets/models/avatar.glb" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.25
height = 0.7

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="avatar" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0.6, 0 )
shape = SubResource( 1 )

[node name="EyeCamera" type="Camera" parent="."]
transform = Transform( -1, -8.14603e-07, 3.14017e-13, -8.146e-07, 0.999996, -0.00291479, 2.37408e-09, -0.00291479, -0.999996, 0, 0.995341, 0.17864 )
current = true
fov = 68.1596
near = 0.01
far = 8192.0

[node name="PathFollow" type="PathFollow" parent="."]
rotation_mode = 4

[node name="GroundDetector" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 100, 0, 0, 0, 1, 0, 10, 0 )
enabled = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
margin_left = 22.0
margin_top = 21.0
margin_right = 161.0
margin_bottom = 88.0

[node name="MphLabel" type="Label" parent="Control/Panel"]
margin_left = 10.0
margin_top = 11.0
margin_right = 137.0
margin_bottom = 37.0
text = "Ran: %.2f miles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepsLabel" type="Label" parent="Control/Panel"]
margin_left = 10.6292
margin_top = 39.4737
margin_right = 116.629
margin_bottom = 70.4737
text = "Steps / sec: %.1f
"

[node name="UpdateUiTimer" type="Timer" parent="Control"]
autostart = true

[node name="RotationTween" type="Tween" parent="."]
[connection signal="timeout" from="Control/UpdateUiTimer" to="." method="_on_UpdateUiTimer_timeout"]
